[project]
name = "y"
version = "0.1.0"
description = ""
authors = [
    {name = "Jennifer Maia", email = "jen_maia@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

